Fix sticky header overlapping issue

--- a/style.css
+++ b/style.css
@@ -1,7 +1,3 @@
-:root {
-	--header-height: 64px;
-}
-
 * {
 	box-sizing: border-box;
 	margin: 0;
@@ -11,6 +7,7 @@
 html {
 	font-size: 16px;
 	scroll-behavior: smooth;
+	scroll-padding-block-start: 48px;
 }
 
 body {
@@ -51,7 +48,7 @@ button {
 
 .header {
 	background-color: #1f2937;
-	padding: 0 24px;
+	padding: 24px;
 	position: sticky;
 	top: 0;
 	z-index: 100;
@@ -59,7 +56,6 @@ button {
 }
 
 .header .container {
-	height: var(--header-height);
 	display: flex;
 	align-items: center;
 }
